--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -15,8 +15,8 @@
     <div class="question">
         <h1>{{questions[currentQuestion].question}}</h1>
     </div>
-    <div class="answers">
-        <div class="option" *ngFor="let option of questions[currentQuestion].options; index as i; first as isFirst" (click)="optionSelect(option.id)">
+    <div class="answers" *ngIf="questions.length>0">
+        <div class="option"  *ngFor="let option of questions[currentQuestion].options; index as i; first as isFirst" (click)="optionSelect(option.id)">
             <img src="{{option.img}}" alt="" srcset="">
             <h3>{{option.value}}</h3>
         </div>
