--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -2,7 +2,7 @@
     <div *ngIf="checkUser()">
         <app-leaderboard></app-leaderboard>
     </div>
-    <div *ngIf="!checkUser()">
+    <div *ngIf="checkUser()">
         <app-game></app-game>
     </div>
 </div>
