--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1 class="center">Create</h1>
+    <input id="name" type="text" placeholder="Enter your name">
     <div class="indicators">
         <div class="">1</div>
         <div class="">2</div>
