--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -38,4 +38,14 @@
         }
     }
 
+    #name{
+        font-size: 18px;
+        padding: 10px;
+        background-color: rgb(56, 56, 56);
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        
+    }
+
 }
